# aipdf-tauri

./: README.md  STYLE.md  bun.lockb  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
scripts/: fetch-pdfium.sh
src/: App.css  App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  embedding.rs  lib.rs  main.rs  rag_pipeline.rs  state.rs  vector_db.rs
src-tauri/src/ai/: agent.rs  inference.rs  mod.rs  session.rs  tokenizer.rs
src-tauri/src/commands/: ai.rs  mod.rs  pdf.rs  utils.rs  workspace.rs
src-tauri/src/models/: downloader.rs  mod.rs  registry.rs
src-tauri/src/pdf/: document.rs  mod.rs  renderer.rs  text.rs
src/components/: ChatHistoryModal.tsx  ChatPanel.tsx  DocumentSidebar.tsx  ModelManager.tsx  PageSidebar.tsx  PdfMindmapModal.tsx  PdfViewer.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/components/chat/: ChatContextMenu.tsx  ChatHeader.tsx  ChatInput.tsx  ChatInputToolbar.tsx  MessageItem.tsx  MessageList.tsx  SessionItem.tsx
src/components/pdf/: AddPageContextButton.tsx  DocumentTabs.tsx  EmptyState.tsx  OutlineFetcher.tsx  PageIndexer.tsx  TooltipForm.tsx
src/components/ui/: scroll-area.tsx  select.tsx  tooltip.tsx
src/hooks/: useAgent.ts  useAi.ts  useAiListeners.ts  useChatContextMenu.ts  useChatHistory.ts  usePageIndexer.ts  usePdf.ts
src/lib/: utils.ts
