[package]
name = "aipdf"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "aipdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "load-dynamic"] }
tokenizers = "0.21"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
png = "0.17"
